plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.medium.shazinsadakath'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '19'

tasks.withType(JavaCompile) {
	options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
